# flameshot

src/core/: controller.cpp  controller.h
src/widgets/: CMakeLists.txt  uploadhistory.cpp  uploadhistory.h  uploadhistory.ui  uploadhistorywidget.cpp  uploadhistorywidget.h  uploadlineitem.cpp  uploadlineitem.h  uploadlineitem.ui
